--- a/css/main.css
+++ b/css/main.css
@@ -1,33 +1,31 @@
 @import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,300);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,300italic);
 
-nav {
-	position: fixed;
-	background-color: #181C22;
-	color: white;
+body {
+	font-family: lato, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 16px;
-	width: 100%;
-	padding-top: 0.5em;
-	z-index: 9999;
+	font-weight: 300;
+	background-color: #E9EAEE;
 }
 
-li {
-	float: right;
-	display: inline;
-	padding: 0.5em;
+h1 {
+	bottom: 0px;
+	margin: 0px;
+	padding-top: 130px;
 }
 
-nav a {
-	font-variant: small-caps;
-	text-decoration: none;
-	fill: white;
+#nav {
+	padding-top: 20px;
+}
+#head {
+	background-image: url('../img/background.jpg');
+	background-repeat: no-repeat;
+	background-size: 100%;
 	color: white;
-}
-
-nav a:hover, nav a:focus {
-	text-decoration: none;
-	color: #D87E28;
-	fill: #D87E28;
+	text-align: center;
+	min-height: 320px;
 }
 
 #toTop {
@@ -36,8 +34,18 @@ nav a:hover, nav a:focus {
 	right: 10px;
 }
 
-footer{
-	position: fixed;
+footer {
+	font-size: 12px;
+	position: relative;
 	bottom: 0px;
-	right: 5px;
+	background-image: url('../img/background.jpg');
+	background-repeat: no-repeat;
+	background-size: 100%;
+	color: white;
+	min-height: 1em;
+}
+
+footer p {
+	margin: 0px;
+	padding-left: 20px
 }
